assets/node-exporter/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: node-exporter
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  # Allow access to node-exporter 9100(port name: https) port
  - ports:
    - port: https
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-exporter
  policyTypes:
  - Ingress
  - Egress
